<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">足道水吧</string>
    <string name="action_settings">Settings</string>
    <string name="hello">hello</string>
    <string name="hint_account">请输入编号</string>
    <string name="hint_pass">请输入密码</string>
    <string name="exception">对不起,网络连接超时!</string>
    <string name="register_title">请输入注册码</string>
    <string name="register_xinxi1">注册码请联系:创度软件科技(上海)有限公司</string>
    <string name="register_tele">联系电话:021-60518438</string>
    <string name="sure">确定</string>

    <string name="cancle">取消</string>
    <string name="all_read">已读消息</string>
    <string name="not_read">未读消息</string>
    <string name="roomCode">房间编号</string>
    <string name="time">呼叫时间</string>
    <string name="count">数量</string>
    <string name="messager">消息内容</string>
    <string name="handle">操作</string>
    <string name="shoudao">收到</string>
    <string name="foot_bar">水房平板</string>
    <string name="tea_bar">茶吧平板</string>
    <string name="config_print">打印配置</string>
    <string name="select_print_device">请选择一台打印设备</string>
    <string name="none_paired">没有已匹配的设备</string>
    <string name="scanning">搜索</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_found">未发现设备</string>
    <string name="btnSearch">连接蓝牙打印机</string>
    <string name="btnSend">打印</string>
    <string name="btn_test">打印测试页</string>
    <string name="btnClose">关闭</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="menu_settings">设置</string>
    <string name="strLang">ch</string>
    <string name="button_scan">搜索</string>

</resources>