<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bar_color_bg" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bar_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/login_youshang" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/login_zuoxia" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dp"
        android:background="@drawable/frame" />

    <RelativeLayout
        android:id="@+id/bar_main_bottom_rl"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bar_main_not_read"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/bar_sure_button"
                android:text="@string/not_read"
                android:textColor="@color/black6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bar_main_al_read"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/bar_cancle_button"
                android:text="@string/all_read"
                android:textColor="@color/black6"
                android:textSize="20sp" />
            <Button
                android:id="@+id/config_blue_tooth"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/bar_cancle_button"
                android:text="@string/config_print"
                android:textColor="@color/black6"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/bar_type_choose_radiogroup"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/bar_type_choose_foot_radio"
                    style="@style/RadioButtonStyles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foot_bar"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/bar_type_choose_tea_radio"
                    style="@style/RadioButtonStyles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tea_bar"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/xinxi" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bar_main_bottom_rl"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bar_head_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/bar_main_room_head"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/roomCode"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bar_main_time_head"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/bar_main_room_head"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bar_main_count_head"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/bar_main_time_head"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/count"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bar_main_handle_head"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/handle"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bar_main_messager_head"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_toLeftOf="@id/bar_main_handle_head"
                android:layout_toRightOf="@id/bar_main_count_head"
                android:gravity="center_vertical"
                android:text="@string/messager"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/bar_main_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@null"
            android:dividerHeight="6dp" >
        </ListView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/bar_main_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/progress_style_xml_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/bar_main_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/hello"
        android:textColor="@color/black3"
        android:textSize="12sp" />

</RelativeLayout>