<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bar_color_bg" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bar_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/login_youshang" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/login_zuoxia" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dp"
        android:background="@drawable/frame" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/titlepic" />

        <ImageView
            android:id="@+id/bar_xinxi_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="36dp"
            android:src="@drawable/xinxi" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bar_xinxi_image"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="60dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/logintext" />

            <EditText
                android:id="@+id/bar_login_account_edit"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginLeft="70dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_account"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/bar_login_pass_edit"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@id/bar_login_account_edit"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/bar_check_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar_login_pass_edit"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/bar_check_remeber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/check_box"
                    android:button="@null" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/jizhumima" />
            </LinearLayout>

            <Button
                android:id="@+id/bar_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar_login_pass_edit"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/bar_check_ll"
                android:background="@drawable/regedit" />

            <ImageButton
                android:id="@+id/bar_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar_register_button"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:src="@drawable/dengluanniu" />
        </RelativeLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/bar_login_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/progress_style_xml_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/bar_login_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/hello"
        android:textColor="@color/black3"
        android:textSize="12sp" />

</RelativeLayout>